# syntax-tree-streamer

./: .gitignore  CLAUDE.md  Makefile  README.md  developers.org  examples.org  extract-tokens.scm  init.el  pyproject.toml  references.bib  requirements.txt  research.html  research.org  research.tex  setup-parser.sh
examples/: chirac.lisp  de_gaulle.lisp  freebsd-upgrade.lisp  freebsd_upgrade.lisp  macron.lisp  proust_ast.lisp
src/: proust_reader.py
