[tool.poetry]
name = "syntax-tree-streamer"
version = "0.1.0"
description = "Syntax tree representation and processing system for streaming S-expression-based data from LLMs"
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
spacy = "^3.7.2"
numpy = "^1.26.3"
windows-curses = {version = "^2.3.1", platform = "win32"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
proust-reader = "src.proust_reader:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100